--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication">
 
     <application
@@ -11,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".ActivityResult"
+            android:name=".WhitelistActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -22,10 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".FocusActivity"
-            android:exported="false"/>
+            android:exported="false" />
+        <activity android:name=".WhiteListChooserActivity"/>
 
         <service android:name=".CountDownService" />
 
