--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:icon="@mipmap/ic_launcher"
+        android:theme="@style/Theme.MyApplication"
+        android:label="@string/app_name">
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
