--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,15 @@
         android:theme="@style/Theme.MyApplication"
         android:label="@string/app_name">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settings_screen.SettingsActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".WhitelistActivity"
+            android:name=".focus_screen.WhitelistActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".main_screen.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
@@ -31,14 +31,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FocusActivity"
+            android:name=".focus_screen.FocusActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MyApplication.NoActionBar"
             android:exported="false" />
-        <activity android:name=".WhiteListChooserActivity" />
+        <activity android:name=".settings_screen.WhiteListChooserActivity" />
 
-        <receiver android:name=".SystemButtonBR" />
-        <receiver android:name=".ReminderBroadcast" />
+        <receiver android:name=".focus_screen.SystemButtonBR" />
+        <receiver android:name=".main_screen.ReminderBroadcast" />
     </application>
 
 </manifest>
